--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+    <header class="header">
+        <div class="header__contenedor">
+            <div class="header__barra">
+                <a href="/">
+                    <img class="header__logo" src="img/logo.svg" alt="imagen logo">
+                </a>
 
+                <nav class="navegacion">
+                    <a class="navegacion__enlace" href="index.html">Inicio</a>
+                    <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+                    <a class="navegacion__enlace" href="blog.html">Blog</a>
+                    <a class="navegacion__enlace" href="tienda.html">Tienda</a>
+                </nav>
+            </div><!--.header__barra-->
+
+            <div class="modelo">
+                <h1 class="modelo__nombre">Modelo VAI</h1>
+                <p class="modelo__descripcion">Commodo tempor dolore minim dolore consectetur quis mollit consectetur ullamco. Ullamco occaecat cupidatat velit amet. Nostrud consequat sit consectetur nisi in labore amet eu magna veniam non velit culpa Lorem. </p>
+                <p class="modelo__precio">$399</p>
+                <a class="modelo__enlace" href="producto.html">Ver Producto</a>
+            </div>
+        </div>
+        <img src="img/header_guitarra.png" alt="imagen header guitarra" class="header__guitarra">
+    </header>
 </body>
 </html>
