--- a/index.html
+++ b/index.html
@@ -36,5 +36,131 @@
         </div>
         <img src="img/header_guitarra.png" alt="imagen header guitarra" class="header__guitarra">
     </header>
+    <main class="productos productos__contenedor">
+        <h2 class="productos__heading">Nuestra Colección</h2>
+        <div class="productos__grid">
+            <div class="producto">
+                <img src="img/guitarra_01.jpg" alt="imagen guitarra" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Lukather</h3>
+                    <p class="producto__descripcion">Aliquip proident exercitation ipsum laboris. Labore do laborum eiusmod velit qui. Magna officia consequat veniam tempor</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div><!--.producto-->
+            <div class="producto">
+                <img src="img/guitarra_02.jpg" alt="imagen guitarra" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">SRV</h3>
+                    <p class="producto__descripcion">Aliquip proident exercitation ipsum laboris. Labore do laborum eiusmod velit qui. Magna officia consequat veniam tempor</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div><!--.producto-->
+            <div class="producto">
+                <img src="img/guitarra_03.jpg" alt="imagen guitarra" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Borland</h3>
+                    <p class="producto__descripcion">Aliquip proident exercitation ipsum laboris. Labore do laborum eiusmod velit qui. Magna officia consequat veniam tempor</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div><!--.producto-->
+            <div class="producto">
+                <img src="img/guitarra_04.jpg" alt="imagen guitarra" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">VAI</h3>
+                    <p class="producto__descripcion">Aliquip proident exercitation ipsum laboris. Labore do laborum eiusmod velit qui. Magna officia consequat veniam tempor</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div><!--.producto-->
+            <div class="producto">
+                <img src="img/guitarra_05.jpg" alt="imagen guitarra" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Thompson</h3>
+                    <p class="producto__descripcion">Aliquip proident exercitation ipsum laboris. Labore do laborum eiusmod velit qui. Magna officia consequat veniam tempor</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div><!--.producto-->
+            <div class="producto">
+                <img src="img/guitarra_06.jpg" alt="imagen guitarra" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">White</h3>
+                    <p class="producto__descripcion">Aliquip proident exercitation ipsum laboris. Labore do laborum eiusmod velit qui. Magna officia consequat veniam tempor</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div><!--.producto-->
+            <div class="producto">
+                <img src="img/guitarra_07.jpg" alt="imagen guitarra" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Cobain</h3>
+                    <p class="producto__descripcion">Aliquip proident exercitation ipsum laboris. Labore do laborum eiusmod velit qui. Magna officia consequat veniam tempor</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div><!--.producto-->
+            <div class="producto">
+                <img src="img/guitarra_08.jpg" alt="imagen guitarra" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Dale</h3>
+                    <p class="producto__descripcion">Aliquip proident exercitation ipsum laboris. Labore do laborum eiusmod velit qui. Magna officia consequat veniam tempor</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div><!--.producto-->
+            <div class="producto">
+                <img src="img/guitarra_09.jpg" alt="imagen guitarra" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Krieger</h3>
+                    <p class="producto__descripcion">Aliquip proident exercitation ipsum laboris. Labore do laborum eiusmod velit qui. Magna officia consequat veniam tempor</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div><!--.producto-->
+            <div class="producto">
+                <img src="img/guitarra_10.jpg" alt="imagen guitarra" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Campbell</h3>
+                    <p class="producto__descripcion">Aliquip proident exercitation ipsum laboris. Labore do laborum eiusmod velit qui. Magna officia consequat veniam tempor</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div><!--.producto-->
+            <div class="producto">
+                <img src="img/guitarra_11.jpg" alt="imagen guitarra" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Reed</h3>
+                    <p class="producto__descripcion">Aliquip proident exercitation ipsum laboris. Labore do laborum eiusmod velit qui. Magna officia consequat veniam tempor</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div><!--.producto-->
+            <div class="producto">
+                <img src="img/guitarra_12.jpg" alt="imagen guitarra" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Hazel</h3>
+                    <p class="producto__descripcion">Aliquip proident exercitation ipsum laboris. Labore do laborum eiusmod velit qui. Magna officia consequat veniam tempor</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div><!--.producto-->
+
+        </div><!--.productos__grid-->
+    </main>
 </body>
 </html>
