seccion-cursos finalizado

--- a/index.html
+++ b/index.html
@@ -162,5 +162,16 @@
 
         </div><!--.productos__grid-->
     </main>
+
+    <section class="cursos">
+        <div class="cursos__contenedor cursos__grid">
+            <div class="cursos__contenido">
+                <h2 class="cursos__heading">Aprende a tocar guitarra</h2>
+                <p class="cursos__texto">Aliquip ullamco ea eiusmod officia anim velit reprehenderit aute ullamco nisi. Voluptate eiusmod et enim reprehenderit. Quis enim mollit nulla aute non eiusmod enim consequat nisi excepteur quis anim aliqua. Commodo ea consectetur nulla aliquip eiusmod sunt irure qui sint consequat ad eiusmod.</p>
+                <a href="#" class="cursos__enlace">Más información</a>
+            </div>
+        </div>
+        
+    </section>
 </body>
 </html>
