base.html añadido

--- a/index.html
+++ b/index.html
@@ -289,57 +289,89 @@
     </section>
 
     <section class="blog">
-        <h2 class="blog__heading">Nuestro Blog</h2>
-        <div class="blog__contenedor blog__grid">
-            <article class="entrada">
-                <img src="img/blog_1.jpg" alt="imagen blog" class="entrada__imagen">
-                <div class="entrada__contenido">
-                    <h3 class="entrada__titulo">¿Cómo elegir tu primera guitarra?</h3>
-                    <p class="entrada__fecha">14 de Marzo de 2023</p>
-                    <p class="entrada__texto">Exercitation esse mollit ullamco tempor quis labore aliqua ad adipisicing eu voluptate consectetur magna reprehenderit. Sint aute tempor dolore consectetur sunt deserunt consequat. In do minim voluptate eiusmod esse do esse elit esse qui cillum consequat aliqua deserunt. Velit voluptate incididunt quis nostrud consectetur ullamco ullamco ex deserunt quis ex nostrud exercitation aute.</p>
-                    <a href="entrada.html" class="entrada__enlace">Leer Entrada</a>
-                </div>
-            </article>
-            <article class="entrada">
-                <img src="img/blog_2.jpg" alt="imagen blog" class="entrada__imagen">
-                <div class="entrada__contenido">
-                    <h3 class="entrada__titulo">¿Cómo elegir tu primera guitarra?</h3>
-                    <p class="entrada__fecha">14 de Marzo de 2023</p>
-                    <p class="entrada__texto">Exercitation esse mollit ullamco tempor quis labore aliqua ad adipisicing eu voluptate consectetur magna reprehenderit. Sint aute tempor dolore consectetur sunt deserunt consequat. In do minim voluptate eiusmod esse do esse elit esse qui cillum consequat aliqua deserunt. Velit voluptate incididunt quis nostrud consectetur ullamco ullamco ex deserunt quis ex nostrud exercitation aute.</p>
-                    <a href="entrada.html" class="entrada__enlace">Leer Entrada</a>
-                </div>
-            </article>
-            <article class="entrada">
-                <img src="img/blog_3.jpg" alt="imagen blog" class="entrada__imagen">
-                <div class="entrada__contenido">
-                    <h3 class="entrada__titulo">¿Cómo elegir tu primera guitarra?</h3>
-                    <p class="entrada__fecha">14 de Marzo de 2023</p>
-                    <p class="entrada__texto">Exercitation esse mollit ullamco tempor quis labore aliqua ad adipisicing eu voluptate consectetur magna reprehenderit. Sint aute tempor dolore consectetur sunt deserunt consequat. In do minim voluptate eiusmod esse do esse elit esse qui cillum consequat aliqua deserunt. Velit voluptate incididunt quis nostrud consectetur ullamco ullamco ex deserunt quis ex nostrud exercitation aute.</p>
-                    <a href="entrada.html" class="entrada__enlace">Leer Entrada</a>
-                </div>
-            </article>
-            <article class="entrada">
-                <img src="img/blog_4.jpg" alt="imagen blog" class="entrada__imagen">
-                <div class="entrada__contenido">
-                    <h3 class="entrada__titulo">¿Cómo elegir tu primera guitarra?</h3>
-                    <p class="entrada__fecha">14 de Marzo de 2023</p>
-                    <p class="entrada__texto">Exercitation esse mollit ullamco tempor quis labore aliqua ad adipisicing eu voluptate consectetur magna reprehenderit. Sint aute tempor dolore consectetur sunt deserunt consequat. In do minim voluptate eiusmod esse do esse elit esse qui cillum consequat aliqua deserunt. Velit voluptate incididunt quis nostrud consectetur ullamco ullamco ex deserunt quis ex nostrud exercitation aute.</p>
-                    <a href="entrada.html" class="entrada__enlace">Leer Entrada</a>
-                </div>
-            </article>
-        </div>
+      <h2 class="blog__heading">Nuestro Blog</h2>
+      <div class="blog__contenedor blog__grid">
+        <article class="entrada">
+          <img src="img/blog_1.jpg" alt="imagen blog" class="entrada__imagen" />
+          <div class="entrada__contenido">
+            <h3 class="entrada__titulo">¿Cómo elegir tu primera guitarra?</h3>
+            <p class="entrada__fecha">14 de Marzo de 2023</p>
+            <p class="entrada__texto">
+              Exercitation esse mollit ullamco tempor quis labore aliqua ad
+              adipisicing eu voluptate consectetur magna reprehenderit. Sint
+              aute tempor dolore consectetur sunt deserunt consequat. In do
+              minim voluptate eiusmod esse do esse elit esse qui cillum
+              consequat aliqua deserunt. Velit voluptate incididunt quis nostrud
+              consectetur ullamco ullamco ex deserunt quis ex nostrud
+              exercitation aute.
+            </p>
+            <a href="entrada.html" class="entrada__enlace">Leer Entrada</a>
+          </div>
+        </article>
+        <article class="entrada">
+          <img src="img/blog_2.jpg" alt="imagen blog" class="entrada__imagen" />
+          <div class="entrada__contenido">
+            <h3 class="entrada__titulo">¿Cómo elegir tu primera guitarra?</h3>
+            <p class="entrada__fecha">14 de Marzo de 2023</p>
+            <p class="entrada__texto">
+              Exercitation esse mollit ullamco tempor quis labore aliqua ad
+              adipisicing eu voluptate consectetur magna reprehenderit. Sint
+              aute tempor dolore consectetur sunt deserunt consequat. In do
+              minim voluptate eiusmod esse do esse elit esse qui cillum
+              consequat aliqua deserunt. Velit voluptate incididunt quis nostrud
+              consectetur ullamco ullamco ex deserunt quis ex nostrud
+              exercitation aute.
+            </p>
+            <a href="entrada.html" class="entrada__enlace">Leer Entrada</a>
+          </div>
+        </article>
+        <article class="entrada">
+          <img src="img/blog_3.jpg" alt="imagen blog" class="entrada__imagen" />
+          <div class="entrada__contenido">
+            <h3 class="entrada__titulo">¿Cómo elegir tu primera guitarra?</h3>
+            <p class="entrada__fecha">14 de Marzo de 2023</p>
+            <p class="entrada__texto">
+              Exercitation esse mollit ullamco tempor quis labore aliqua ad
+              adipisicing eu voluptate consectetur magna reprehenderit. Sint
+              aute tempor dolore consectetur sunt deserunt consequat. In do
+              minim voluptate eiusmod esse do esse elit esse qui cillum
+              consequat aliqua deserunt. Velit voluptate incididunt quis nostrud
+              consectetur ullamco ullamco ex deserunt quis ex nostrud
+              exercitation aute.
+            </p>
+            <a href="entrada.html" class="entrada__enlace">Leer Entrada</a>
+          </div>
+        </article>
+        <article class="entrada">
+          <img src="img/blog_4.jpg" alt="imagen blog" class="entrada__imagen" />
+          <div class="entrada__contenido">
+            <h3 class="entrada__titulo">¿Cómo elegir tu primera guitarra?</h3>
+            <p class="entrada__fecha">14 de Marzo de 2023</p>
+            <p class="entrada__texto">
+              Exercitation esse mollit ullamco tempor quis labore aliqua ad
+              adipisicing eu voluptate consectetur magna reprehenderit. Sint
+              aute tempor dolore consectetur sunt deserunt consequat. In do
+              minim voluptate eiusmod esse do esse elit esse qui cillum
+              consequat aliqua deserunt. Velit voluptate incididunt quis nostrud
+              consectetur ullamco ullamco ex deserunt quis ex nostrud
+              exercitation aute.
+            </p>
+            <a href="entrada.html" class="entrada__enlace">Leer Entrada</a>
+          </div>
+        </article>
+      </div>
     </section>
     <footer class="footer">
-        <div class="footer__contenedor footer__contenido">
-            <nav class="footer__nav">
-                <a class="footer__enlace" href="index.html">Inicio</a>
-                <a class="footer__enlace" href="nosotros.html">Nosotros</a>
-                <a class="footer__enlace" href="blog.html">Blog</a>
-                <a class="footer__enlace" href="tienda.html">Tienda</a>
-            </nav>
+      <div class="footer__contenedor footer__contenido">
+        <nav class="footer__nav">
+          <a class="footer__enlace" href="index.html">Inicio</a>
+          <a class="footer__enlace" href="nosotros.html">Nosotros</a>
+          <a class="footer__enlace" href="blog.html">Blog</a>
+          <a class="footer__enlace" href="tienda.html">Tienda</a>
+        </nav>
 
-            <p class="footer__copyright">Todos los derechos reservados</p>
-        </div>
+        <p class="footer__copyright">Todos los derechos reservados</p>
+      </div>
     </footer>
   </body>
 </html>
